[project]
name = "yoomoney"
version = "2.0.0"
description = "Unofficial YooMoney API python library"
readme = "README.rst"
license = "GPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "AlekseyKorshuk", email = "ale-kor02@mail.ru" },
]
keywords = ["yoomoney", "api", "payments", "wallet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/AlekseyKorshuk/yoomoney-api"
Repository = "https://github.com/AlekseyKorshuk/yoomoney-api"
Issues = "https://github.com/AlekseyKorshuk/yoomoney-api/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yoomoney"]

[tool.hatch.build.targets.sdist]
include = [
    "yoomoney/",
    "LICENSE",
    "README.rst",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.15.0",
]

# -- Mypy -----------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

# -- Ruff -----------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",     # pyflakes – avoid common mistakes
    "B",     # flake8-bugbear – common bug patterns
    "E",     # pycodestyle errors – format code consistently
    "N",     # pep8-naming – use naming conventions
    "ANN",   # flake8-annotations – use type annotations
    "W",     # pycodestyle warnings
    "I",     # isort – sort imports
    "ICN",   # flake8-import-conventions
    "ASYNC", # flake8-async – use async correctly
    "S",     # flake8-bandit – avoid common security issues
    "UP",    # pyupgrade – use latest python syntax
    "C90",   # mccabe – reduce complexity
    "A",     # flake8-builtins – don't shadow built-ins
    "T20",   # flake8-print – no print in production
    "T100",  # flake8-debugger – no debuggers in production
    "RET",   # flake8-return – return correctly
    "SIM",   # flake8-simplify – simplify your code
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "PERF",  # perflint – common performance issues
    "RUF",   # ruff-specific best practices
    "C4",    # flake8-comprehensions
    "COM",   # flake8-commas
    "DTZ",   # flake8-datetimez
    "ISC",   # flake8-implicit-str-concat
    "G",     # flake8-logging-format
    "PIE",   # flake8-pie – misc lints
]
ignore = [
    "ANN003", # don't annotate **kwargs
    "ANN401", # allow Any
    "RET504", # allow unnecessary assignment before return
    "COM812", # trailing comma – conflicts with formatter
    "ISC001", # implicit string concat – conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # asserts allowed in tests
    "ARG",     # unused function args (fixtures)
    "PLR2004", # magic values in comparisons
    "S311",    # pseudo-random generators
    "S105",    # possible hardcoded passwords
    "S106",    # possible hardcoded passwords
    "ANN",     # annotations not required in tests
]
"examples/**/*.py" = [
    "T20",  # print allowed in examples
    "ANN",  # annotations not required in examples
    "S105", # possible hardcoded passwords (token placeholders)
    "S106", # possible hardcoded passwords
]
# -- Library per-file ignores (interface-preserving, unfixable) --
"yoomoney/exceptions.py" = [
    "N818",  # exception names are public API – no "Error" suffix by design
]
"yoomoney/authorize/authorize.py" = [
    "T201",  # print() is intentional – interactive OAuth flow outputs to stdout
]
"yoomoney/quickpay/quickpay.py" = [
    "N803",  # camelCase params (paymentType, successURL) match YooMoney API
    "A002",  # `sum` param name matches YooMoney API
]
"yoomoney/client.py" = [
    "A002",  # `type` param in operation_history() matches YooMoney API
]
"yoomoney/_async_client.py" = [
    "A002",  # `type` param in operation_history() matches YooMoney API
]
"yoomoney/_parsers.py" = [
    "A002",  # `type` param in build_history_payload() matches YooMoney API
]
